--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "licenses": "npx license-checker --summary"
   },
   "keywords": ["weather", "typescript", "api"],
   "author": "",
